cambios en index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<li>Hacer Deberes</li>
 			<li>Trabajo</li>
 			<li>Tiempo de Calidad con mi Hija</li>
-			<li>Trabajo</li>	
+			<li>ir a Cine</li>	
 		</ol>
 		<hr>
 		<h2>Cuadro de tareas</h2>
